login signup form (some bug fixed on mobile view)

--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -14,6 +14,7 @@
     background: #fff;
     border-radius: 1rem;
     font-family: var(--thirdfont);
+    padding: 2rem 1rem;
 }
 
 .login_form img{
@@ -58,20 +59,32 @@
 }
 
 .input_boxes input{
-    width: 95%;
+    width: 100%;
     padding: 12px 10px;
     border: 1px solid #dadada;
+    background: #fff;
+    color: #212121;
     border-radius: 8px;
     margin-top: .7rem;
 }
 
 .rigister_btn{
-    width: 95%;
+    width: 100%;
     padding: 10px;
     background: #000;
     border: none;
-    border-radius: 18px;
+    border-radius: 10px;
     font-family: var(--thirdfont);
     color: #fff;
     margin: 1rem 0;
+}
+
+@media (max-width:500px) {
+    .login_form h2{
+        font-size: 2rem;
+    }
+
+    .login_form p{
+        margin-top: 1.5rem;
+    }
 }
