--- a/src/Pages/Register/Register.module.css
+++ b/src/Pages/Register/Register.module.css
@@ -10,6 +10,7 @@
      background: #fff;
      border-radius: 1rem;
      font-family: var(--thirdfont);
+     padding: 2rem 1rem;
 }
 
 .register_form img{
@@ -54,20 +55,37 @@
 }
 
 .input_boxes input{
-     width: 95%;
+     width: 100%;
      padding: 12px 10px;
      border: 1px solid #dadada;
      border-radius: 8px;
      margin-top: .7rem;
+     background: #fff;
+     color: #212121;
 }
 
 .rigister_btn{
-     width: 95%;
+     width: 100%;
      padding: 10px;
      background: #000;
      border: none;
-     border-radius: 18px;
+     border-radius: 10px;
      font-family: var(--thirdfont);
      color: #fff;
      margin: 1rem 0;
 }
+
+
+@media (max-width:500px) {
+     .register_form h2{
+         font-size: 2rem;
+     }
+ 
+     .register_form p{
+         margin-top: 1.5rem;
+     }
+
+     .register_form{
+          height: auto;
+     }
+ }
